# Embedded_CMake

./: README.md
App/Lab1/src/: main.c
Components/Common/inc/: BIT_MATH.h  STD_TYPES.h
Components/MCAL/Dio/: CMakeLists.txt
Components/MCAL/Dio/inc/: MDIO.h
Components/MCAL/Dio/src/: MDIO.c
Components/MCAL/PORT/inc/: Port.h  PortConfig.h
Components/MCAL/PORT/src/: Port.c  PortConfig.c
